# waygate

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  SECURITY.md  index.html  input.css  mkdocs.yml  objects.inv  package.json  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
adapters/: index.html
adapters/custom/: index.html
adapters/fastapi/: index.html
changelog/: index.html
contributing/: index.html
docs/: PR_DESCRIPTION.md  changelog.md  contributing.md  index.md  pr-custom-responses.md
docs/adapters/: custom.md  fastapi.md  index.md
docs/guides/: distributed.md  production.md  shield-server.md  waygate-server.md
docs/javascripts/: mermaid-init.js
docs/overrides/: main.html
docs/reference/: backends.md  cli.md  decorators.md  engine.md  exceptions.md  feature-flags.md  middleware.md  models.md  rate-limiting.md
docs/stylesheets/: extra.css
docs/tutorial/: admin-dashboard.md  backends.md  cli.md  feature-flags.md  first-decorator.md  installation.md  middleware.md  rate-limiting.md  testing.md
examples/fastapi/: basic.py  custom_responses.py  dependency_injection.py  feature_flags.py  global_maintenance.py  multi_service.py  rate_limiting.py  scheduled_maintenance.py  switchly_server.py  webhooks.py
examples/fastapi/custom_backend/: sqlite_backend.py
guides/distributed/: index.html
guides/production/: index.html
guides/shield-server/: index.html
guides/waygate-server/: index.html
reference/backends/: index.html
reference/cli/: index.html
reference/decorators/: index.html
reference/engine/: index.html
reference/exceptions/: index.html
reference/feature-flags/: index.html
reference/middleware/: index.html
reference/models/: index.html
reference/rate-limiting/: index.html
search/: search_index.json
shield/admin/: api.py  app.py  auth.py
shield/cli/: client.py  main.py
shield/core/: config.py  engine.py  exceptions.py  models.py  scheduler.py  webhooks.py
shield/core/backends/: base.py  file.py  memory.py  redis.py  server.py
shield/core/rate_limit/: __init__.py  keys.py  limiter.py  models.py  storage.py
shield/dashboard/: __init__.py  app.py  auth.py  routes.py
shield/dashboard/static/: shield.min.css
shield/dashboard/templates/: audit.html  base.html  index.html  login.html  rate_limits.html  rl_hits.html
shield/dashboard/templates/partials/: audit_row.html  audit_rows.html  global_maintenance.html  global_rl_card.html  modal.html  modal_env_gate.html  modal_global_disable.html  modal_global_enable.html  modal_global_rl.html  modal_global_rl_delete.html  modal_global_rl_reset.html  modal_rl_delete.html  modal_rl_edit.html  modal_rl_reset.html  modal_service_disable.html  modal_service_enable.html  modal_service_rl.html  modal_service_rl_delete.html  modal_service_rl_reset.html  pagination.html  rate_limit_hits.html  rate_limit_rows.html  route_row.html  service_maintenance.html  service_rl_card.html
shield/fastapi/: __init__.py  decorators.py  dependencies.py  middleware.py  openapi.py  router.py
shield/sdk/: __init__.py
tests/: test_cli.py  test_cli_service.py  test_flags_cli.py
tests/admin/: test_api.py  test_auth.py  test_flag_api.py
tests/core/: test_backends.py  test_bypass.py  test_config.py  test_engine.py  test_exceptions.py  test_models.py  test_scheduler.py  test_scheduler_polling.py  test_webhooks.py
tests/core/feature_flags/: test_client.py  test_evaluator.py  test_models.py  test_provider.py  test_scheduler.py  test_sync_client.py
tests/core/rate_limit/: test_models.py  test_policy_persistence.py  test_storage.py
tests/dashboard/: test_flag_dashboard.py  test_rl_dashboard.py  test_routes.py
tests/fastapi/: test_acceptance.py  test_bypass_rate_limits.py  test_decorators.py  test_dependencies.py  test_deprecated.py  test_global_maintenance.py  test_global_maintenance_docs.py  test_middleware.py  test_openapi.py  test_openapi_maintenance.py  test_parameterized_routes.py  test_plain_router.py  test_rate_limit.py  test_router.py  test_startup_scan.py
tests/sdk/: test_flag_provider.py
tutorial/admin-dashboard/: index.html
tutorial/audit-log/: index.html
tutorial/backends/: index.html
tutorial/cli/: index.html
tutorial/custom-responses/: index.html
tutorial/feature-flags/: index.html
tutorial/first-decorator/: index.html
tutorial/installation/: index.html
tutorial/middleware/: index.html
tutorial/rate-limiting/: index.html
tutorial/rollouts/: index.html
tutorial/route-control/: index.html
tutorial/testing/: index.html
tutorial/webhooks/: index.html
waygate/: __init__.py
waygate/admin/: __init__.py  api.py  app.py  auth.py
waygate/cli/: client.py  config.py  main.py
waygate/core/: config.py  engine.py  exceptions.py  models.py  scheduler.py  webhooks.py
waygate/core/backends/: base.py  file.py  memory.py  redis.py  server.py
waygate/core/feature_flags/: __init__.py  _context.py  _guard.py  client.py  evaluator.py  hooks.py  models.py  provider.py  scheduler.py
waygate/core/rate_limit/: __init__.py  keys.py  limiter.py  models.py  storage.py
waygate/dashboard/: __init__.py  app.py  auth.py  routes.py
waygate/dashboard/static/: waygate.min.css
waygate/dashboard/templates/: audit.html  base.html  flag_detail.html  flags.html  index.html  login.html  rate_limits.html  rl_hits.html  segments.html
waygate/dashboard/templates/partials/: audit_row.html  flag_eval_result.html  flag_row.html  flag_rows.html  global_maintenance.html  global_rl_card.html  modal.html  modal_env_gate.html  modal_flag_create.html  modal_flag_eval.html  modal_global_disable.html  modal_global_enable.html  modal_global_rl.html  modal_global_rl_delete.html  modal_global_rl_reset.html  modal_rl_add.html  (+19 more)
waygate/fastapi/: __init__.py  decorators.py  dependencies.py  middleware.py  openapi.py  router.py
waygate/sdk/: __init__.py  flag_provider.py
waygate/server/: __init__.py
waygate/testing/: __init__.py
