[project]
name = "api-shield"
version = "0.1.0"
description = "Route lifecycle management for APIs — maintenance mode, env gating, deprecation, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Richard Quaicoe" },
]
keywords = ["fastapi", "api", "maintenance", "middleware", "route", "lifecycle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Attakay78/api-shield"
Repository = "https://github.com/Attakay78/api-shield"
Issues = "https://github.com/Attakay78/api-shield/issues"

dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "starlette>=0.27",
]

[project.optional-dependencies]
fastapi   = ["fastapi>=0.100"]
redis     = ["redis[asyncio]>=5.0"]
dashboard = ["jinja2>=3.1", "aiofiles>=23.0"]
cli       = ["typer>=0.12"]
all       = [
    "fastapi>=0.100",
    "redis[asyncio]>=5.0",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "typer>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio[trio]",
    "ruff",
    "mypy",
    "aiofiles>=23.0",
    "fastapi>=0.100",
]

[project.scripts]
shield = "shield.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
