[project]
name = "api-shield"
version = "0.5.0"
description = "Route lifecycle management for APIs — maintenance mode, env gating, deprecation, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Richard Quaicoe" },
]
keywords = ["fastapi", "api", "maintenance", "middleware", "route", "lifecycle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "starlette>=0.27",
]

[project.urls]
Homepage = "https://github.com/Attakay78/api-shield"
Repository = "https://github.com/Attakay78/api-shield"
Issues = "https://github.com/Attakay78/api-shield/issues"

[project.optional-dependencies]
fastapi   = ["fastapi>=0.100"]
redis     = ["redis[asyncio]>=5.0"]
dashboard = [
    "jinja2>=3.1",
 "aiofiles>=23.0",
 "python-multipart>=0.0.22",
]
cli       = ["typer>=0.12", "httpx>=0.27", "rich>=13.0"]
admin     = [
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "python-multipart>=0.0.22",
]
yaml      = ["pyyaml>=6.0"]
toml      = ["tomli-w>=1.0"]
rate-limit = ["limits>=5.8.0"]
all       = [
    "fastapi>=0.100",
    "redis[asyncio]>=5.0",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "python-multipart>=0.0.22",
    "limits>=5.8.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio[trio]",
    "ruff",
    "mypy",
    "aiofiles>=23.0",
    "fastapi>=0.100",
    "pre-commit>=3.7",
    "tomli-w>=1.0",
    "pyyaml>=6.0",
    "limits>=5.8.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.scripts]
shield = "shield.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

